--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     ext {
         hilt_version = '2.44'
+        room_version = "2.4.3"
     }
     repositories {
         google()
