--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@
 buildscript {
     ext {
         hilt_version = '2.44'
-        room_version = "2.4.3"
+        room_version = '2.4.3'
+        coroutine_version = '1.3.9'
     }
     repositories {
         google()
